--- a/app/canvas_1/templates/canvas_1/index.html
+++ b/app/canvas_1/templates/canvas_1/index.html
@@ -28,6 +28,48 @@
   </head>
 
   <body>
+    <!-- Vertex Shader -->
+    <script id="vertexShader" type="x-shader/x-vertex">
+      varying vec3 vWorldPosition;
+
+      void main() {
+        vec4 worldPosition = modelMatrix * vec4(position, 1.0);
+        vWorldPosition = worldPosition.xyz;
+
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+      }
+    </script>
+    <!-- Fragment Shader -->
+    <!-- Fragment Shader -->
+    <script id="fragmentShader" type="x-shader/x-fragment">
+      varying vec3 vWorldPosition;
+      uniform float uTime;
+
+      // Random number generator
+      float rand(vec2 co) {
+        return fract(sin(dot(co.xy, vec2(12.9898, 78.233))) * 43758.5453);
+      }
+
+      void main() {
+        float size = 100.0;
+        float prob = 0.9;
+        vec2 pos = floor(1.0 / size * gl_FragCoord.xy);
+        float color = 0.0;
+        float starValue = rand(pos);
+
+        if (starValue > prob) {
+          vec2 center = size * pos + vec2(size, size) * 0.5;
+          float t = 0.9 + 0.2 * sin(uTime * 8.0 + (starValue - prob) / (1.0 - prob) * 45.0);
+          color = 1.0 - distance(gl_FragCoord.xy, center) / (0.5 * size);
+          color = color * t / (abs(gl_FragCoord.y - center.y)) * t / (abs(gl_FragCoord.x - center.x));
+        } else if (rand(gl_FragCoord.xy / 20.0) > 0.996) {
+          float r = rand(gl_FragCoord.xy);
+          color = r * (0.85 * sin(uTime * (r * 5.0) + 720.0 * r) + 0.95);
+        }
+
+        gl_FragColor = vec4(vec3(color), 1.0);
+      }
+    </script>
     <h1>Discoverthreejs.com - Nothing to see here yet :)</h1>
 
     <div id="scene-container">
